--- a/src/app/temperature-chart/temperature-chart.component.scss
+++ b/src/app/temperature-chart/temperature-chart.component.scss
@@ -3,5 +3,11 @@
     width: 50%;
     padding-top: 20px;
     margin: 0 auto;
+
+    @media (min-width: 320px) and (max-width: 480px) {
+      width: 100%;
+    }
   }
+
+
 }
